Issue #150 - Altered mobile padding sizes - default padding on col-* made the elements too small on mobile

--- a/app/assets/stylesheets/spacing.scss
+++ b/app/assets/stylesheets/spacing.scss
@@ -9,3 +9,7 @@
     margin-bottom: $spacing-unit;
   }
 }
+
+.no-padding {
+	padding: 0 !important;
+}
